[package]
name = "tekton"
version = "0.2.0"
edition = "2021"
authors = ["Nicholas O'Kelley"]
repository = "https://github.com/OkelleyDevelopment/tekton"
description = "A blazingly fast code snippet builder"
readme = "README.md"
license = "GPL-3.0"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

["lib"]
name = 'tekton'
path = 'src/lib.rs'

[[bin]]
name="tekton"
path="./src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
regex = "1"
clap = { version = "3.2.20", features = ["derive"] }
